# qradar-restapi-kafka-datapipeline

./: .gitignore  README.md  attributes.py  clickhouseclient.py  docker-compose.yml  etl.py  main.py  pipeline_logger.py  producer.py  pyproject.toml  qradarconnector.py  query_builder.py  run.py  search_executor.py  settings.py  test.py
clickhouse/: clickhouse.py  clickhouse_types.yaml  helpers.py  helpers_1.py
druid/: push_streaming.py
kafka/: kafka.jaas.conf  kafka_server_jaas.conf  producer.py
mongodb/: client.py
mykafka/: producer.py
qradar/: qradarconnector.py  query_builder.py  search_executor.py
qradar/input/: duration.json  ep_clients.json  new_accumulator_queries.json  new_api_queries.json  new_queries.json  queries.json
